--- a/eda.ipynb
+++ b/eda.ipynb
@@ -11,6 +11,545 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mh_1 = pd.read_csv('data/mentalillness_data1.csv')\n",
+    "mh_2 = pd.read_csv('data/mentalillness_data2.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(500000, 5)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mh_1.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(500000, 5)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mh_2.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>count</td>\n",
+       "      <td>500000.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>mean</td>\n",
+       "      <td>249999.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>std</td>\n",
+       "      <td>144337.711634</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>min</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>25%</td>\n",
+       "      <td>124999.750000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>50%</td>\n",
+       "      <td>249999.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>75%</td>\n",
+       "      <td>374999.250000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>max</td>\n",
+       "      <td>499999.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  id\n",
+       "count  500000.000000\n",
+       "mean   249999.500000\n",
+       "std    144337.711634\n",
+       "min         0.000000\n",
+       "25%    124999.750000\n",
+       "50%    249999.500000\n",
+       "75%    374999.250000\n",
+       "max    499999.000000"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mh_1.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>count</td>\n",
+       "      <td>500000.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>mean</td>\n",
+       "      <td>749999.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>std</td>\n",
+       "      <td>144337.711634</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>min</td>\n",
+       "      <td>500000.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>25%</td>\n",
+       "      <td>624999.750000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>50%</td>\n",
+       "      <td>749999.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>75%</td>\n",
+       "      <td>874999.250000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>max</td>\n",
+       "      <td>999999.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  id\n",
+       "count  500000.000000\n",
+       "mean   749999.500000\n",
+       "std    144337.711634\n",
+       "min    500000.000000\n",
+       "25%    624999.750000\n",
+       "50%    749999.500000\n",
+       "75%    874999.250000\n",
+       "max    999999.000000"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mh_2.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>state</th>\n",
+       "      <th>ethnicity</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>illness</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Hawaii</td>\n",
+       "      <td>white</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Other</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Alaska</td>\n",
+       "      <td>black</td>\n",
+       "      <td>m</td>\n",
+       "      <td>Depression</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>South Carolina</td>\n",
+       "      <td>hispanic</td>\n",
+       "      <td>f</td>\n",
+       "      <td>Schizophrenia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Louisiana</td>\n",
+       "      <td>white</td>\n",
+       "      <td>m</td>\n",
+       "      <td>Eating Disorder</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Illinois</td>\n",
+       "      <td>white</td>\n",
+       "      <td>f</td>\n",
+       "      <td>OCD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>499995</td>\n",
+       "      <td>499995</td>\n",
+       "      <td>New Mexico</td>\n",
+       "      <td>white</td>\n",
+       "      <td>m</td>\n",
+       "      <td>Eating Disorder</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>499996</td>\n",
+       "      <td>499996</td>\n",
+       "      <td>Illinois</td>\n",
+       "      <td>white</td>\n",
+       "      <td>m</td>\n",
+       "      <td>Other</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>499997</td>\n",
+       "      <td>499997</td>\n",
+       "      <td>Oregon</td>\n",
+       "      <td>black</td>\n",
+       "      <td>m</td>\n",
+       "      <td>OCD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>499998</td>\n",
+       "      <td>499998</td>\n",
+       "      <td>Virginia</td>\n",
+       "      <td>white</td>\n",
+       "      <td>m</td>\n",
+       "      <td>Depression</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>499999</td>\n",
+       "      <td>499999</td>\n",
+       "      <td>Missouri</td>\n",
+       "      <td>white</td>\n",
+       "      <td>f</td>\n",
+       "      <td>Anxiety Disorder</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>500000 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            id           state ethnicity gender           illness\n",
+       "0            0          Hawaii     white    NaN             Other\n",
+       "1            1          Alaska     black      m        Depression\n",
+       "2            2  South Carolina  hispanic      f     Schizophrenia\n",
+       "3            3       Louisiana     white      m   Eating Disorder\n",
+       "4            4        Illinois     white      f               OCD\n",
+       "...        ...             ...       ...    ...               ...\n",
+       "499995  499995      New Mexico     white      m   Eating Disorder\n",
+       "499996  499996        Illinois     white      m             Other\n",
+       "499997  499997          Oregon     black      m               OCD\n",
+       "499998  499998        Virginia     white      m        Depression\n",
+       "499999  499999        Missouri     white      f  Anxiety Disorder\n",
+       "\n",
+       "[500000 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mh_1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>state</th>\n",
+       "      <th>ethnicity</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>illness</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>500000</td>\n",
+       "      <td>Wisconsin</td>\n",
+       "      <td>white</td>\n",
+       "      <td>f</td>\n",
+       "      <td>Schizophrenia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>500001</td>\n",
+       "      <td>Hawaii</td>\n",
+       "      <td>black</td>\n",
+       "      <td>f</td>\n",
+       "      <td>Bipolar</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>500002</td>\n",
+       "      <td>Kansas</td>\n",
+       "      <td>white</td>\n",
+       "      <td>f</td>\n",
+       "      <td>OCD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>500003</td>\n",
+       "      <td>Montana</td>\n",
+       "      <td>white</td>\n",
+       "      <td>m</td>\n",
+       "      <td>Depression</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>500004</td>\n",
+       "      <td>Mississippi</td>\n",
+       "      <td>white</td>\n",
+       "      <td>m</td>\n",
+       "      <td>Eating Disorder</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>499995</td>\n",
+       "      <td>999995</td>\n",
+       "      <td>Louisiana</td>\n",
+       "      <td>white</td>\n",
+       "      <td>m</td>\n",
+       "      <td>Depression</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>499996</td>\n",
+       "      <td>999996</td>\n",
+       "      <td>Massachusetts</td>\n",
+       "      <td>white</td>\n",
+       "      <td>f</td>\n",
+       "      <td>ADHD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>499997</td>\n",
+       "      <td>999997</td>\n",
+       "      <td>Missouri</td>\n",
+       "      <td>hispanic</td>\n",
+       "      <td>f</td>\n",
+       "      <td>Anxiety Disorder</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>499998</td>\n",
+       "      <td>999998</td>\n",
+       "      <td>Utah</td>\n",
+       "      <td>black</td>\n",
+       "      <td>m</td>\n",
+       "      <td>Depression</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>499999</td>\n",
+       "      <td>999999</td>\n",
+       "      <td>Massachusetts</td>\n",
+       "      <td>white</td>\n",
+       "      <td>m</td>\n",
+       "      <td>Depression</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>500000 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            id          state ethnicity gender           illness\n",
+       "0       500000      Wisconsin     white      f     Schizophrenia\n",
+       "1       500001         Hawaii     black      f           Bipolar\n",
+       "2       500002         Kansas     white      f               OCD\n",
+       "3       500003        Montana     white      m        Depression\n",
+       "4       500004    Mississippi     white      m   Eating Disorder\n",
+       "...        ...            ...       ...    ...               ...\n",
+       "499995  999995      Louisiana     white      m        Depression\n",
+       "499996  999996  Massachusetts     white      f              ADHD\n",
+       "499997  999997       Missouri  hispanic      f  Anxiety Disorder\n",
+       "499998  999998           Utah     black      m        Depression\n",
+       "499999  999999  Massachusetts     white      m        Depression\n",
+       "\n",
+       "[500000 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mh_2"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
